--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,1 +1,15 @@
-@import "tailwindcss"
+@import "tailwindcss";
+
+@utility form-input {
+  width: 100%;
+  border-radius: var(--radius-md);
+  padding-inline: calc(var(--spacing) * 3);
+  padding-block: calc(var(--spacing) * 1.5);
+  outline: 1px solid var(--color-gray-300);
+}
+
+.form-input:focus {
+  outline-width: 2px;
+  outline-offset: calc(2px * -1);
+  outline-color: var(--color-indigo-600);
+}
