--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -84,3 +84,51 @@
   --tw-ring-shadow: 0 0 0 4px;
   --tw-ring-color: var(--color-gray-100)
 }
+
+@utility error-input {
+  width: 100%;
+  border-radius: var(--radius-md);
+  padding-inline: calc(var(--spacing) * 3);
+  padding-block: calc(var(--spacing) * 1.5);
+  outline: 1px solid var(--color-red-500);
+  background-color: var(--color-red-50);
+  color: var(--color-red-900);
+  font-size: var(--text-sm);
+  line-height: var(--text-sm--line-height);
+}
+
+.error-input:focus{
+  --tw-ring-color: var(--color-red-500)
+  outline: 2px solid var(--color-red-500);
+}
+
+@utility success-input {
+  width: 100%;
+  border-radius: var(--radius-md);
+  padding-inline: calc(var(--spacing) * 3);
+  padding-block: calc(var(--spacing) * 1.5);
+  outline: 1px solid var(--color-green-500);
+  background-color: var(--color-green-50);
+  color: var(--color-green-900);
+  font-size: var(--text-sm);
+  line-height: var(--text-sm--line-height);
+}
+
+.success-input:focus{
+  --tw-ring-color: var(--color-green-500)
+  outline: 1px solid var(--color-green-500);
+}
+
+@utility errmsg{
+  margin-top: 2;
+  font-size: var(--text-sm);
+  color: var(--color-red-600);
+  font-weight: 500;
+}
+
+@utility successmsg{
+  margin-top: 2;
+  font-size: var(--text-xs);
+  color: var(--color-green-600);
+  font-weight: 500;
+}
